--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "react-based mastermind game clone",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "concurrently \"nodemon source/server.ts && cd client && npm start\""
   },
   "keywords": [
     "node",
@@ -24,6 +24,7 @@
     "mongoose": "^6.1.7",
     "node": "^17.3.1",
     "passport": "^0.5.2",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "serve-favicon": "^2.5.0"
   },
@@ -34,10 +35,12 @@
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
     "@types/passport": "^1.0.7",
+    "@types/passport-google-oauth20": "^2.0.11",
     "@types/passport-local": "^1.0.34",
     "@types/serve-favicon": "^2.5.3",
+    "concurrently": "^7.0.0",
     "nodemon": "^2.0.15",
     "ts-node": "^10.4.0",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.5"
   }
 }
