--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.17.2",
     "express-session": "^1.17.2",
     "mongoose": "^6.1.7",
+    "mongoose-unique-validator": "^3.0.0",
     "node": "^17.3.1",
     "passport": "^0.5.2",
     "passport-google-oauth20": "^2.0.0",
@@ -36,6 +37,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
+    "@types/mongoose-unique-validator": "^1.0.5",
     "@types/passport": "^1.0.7",
     "@types/passport-google-oauth20": "^2.0.11",
     "@types/passport-local": "^1.0.34",
